♻️ refactor: class swap by id

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button type="button" class="btn-search">Search</button>
       </div>
       <div class="primary-info">
-        <h1 class="city"></h1>
+        <h1 id="city"></h1>
 
         <p class="temperature" id="temperature"></p>
 
