♻️ refactor: update stylesheet and script paths to include frontend directory

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecast</title>
-    <link rel="stylesheet" href="./src/css/reset.css" />
-    <link rel="stylesheet" href="./src/css/font.css" />
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./frontend/src/css/reset.css" />
+    <link rel="stylesheet" href="./frontend/src/css/font.css" />
+    <link rel="stylesheet" href="./frontend/src/css/style.css" />
   </head>
   <body>
     <main class="container">
@@ -43,6 +43,6 @@
         </div>
       </div>
     </main>
-    <script src="./src/js/index.js"></script>
+    <script src="./frontend/src/js/index.js"></script>
   </body>
 </html>
